syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message ServerEntry {
    string address = 1;
    string qualifier = 2;
}

message LookupRequest {
    string serviceName = 1;
    string qualifier = 2;
}

message LookupResponse {
    repeated ServerEntry server = 1;
}

message RegisterRequest {
    string serviceName = 1;
    string qualifier = 2;
    string address = 3;
}

message RegisterResponse {
    int32 id = 1;
}

message DeleteRequest {
    string serviceName = 1;
    string address = 2;
}

message DeleteResponse {}

service NamingServerService{
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc lookup(LookupRequest) returns (LookupResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
}
